--- a/graphic_templates/_base/base_template.html
+++ b/graphic_templates/_base/base_template.html
@@ -2,38 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Graphic : NPR</title>
+    <title>Graphic : {{ COMPANY_NAME }}</title>
 
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex" />
-    <link rel="shortcut icon" href="http://media.npr.org/favicon.ico" />
+    <link rel="shortcut icon" href="{{ FAVICON_URL }}" />
 
     <base target="_blank">
-
-    {% block fonts %}
-
-    <!-- Fonts -->
-    <script src="http://apps.npr.org/dailygraphics/graphics/fonts/js/lib/webfont.js"></script>
-    <script>
-    WebFont.load({
-        custom: {
-            families: [
-                'Gotham SSm:n4,n7',
-                'Knockout 31 4r:n4'
-            ],
-            urls: [
-                'http://s.npr.org/templates/css/fonts/GothamSSm.css',
-                'http://s.npr.org/templates/css/fonts/Knockout.css'
-            ]
-        },
-        timeout: 10000
-    });
-    </script>
-
-    {% endblock %}
 
     <!-- Configuration -->
     <script type="text/javascript">
